<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_border_upload_dialog"
    android:orientation="vertical">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:shrinkColumns="1"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/POID"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_POID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/number"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_PONO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Ngày kiểm tra"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_bdate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:hint="2023/09/01"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:gravity="center_vertical"
                    android:text="~"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_edate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:hint="2023/09/01"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/darker_gray" />




    <TextView
        android:id="@+id/tv_updStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:hint="Trạng thái"
        android:textSize="18sp" />
    <LinearLayout
        android:id="@+id/linear_processing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="end"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_processing"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right"
            android:hint="0"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_processMaxValues"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left"
            android:hint="/100"
            android:textSize="18sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progBar_upload"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:visibility="gone"
        android:layout_marginEnd="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/btn_ok" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/btn_cancel" />

    </LinearLayout>

</LinearLayout>